# XDU-algs4

./: README.md
lab1/: CMakeLists.txt  Percolation.cpp  Percolation.h  QuickFindUF.cpp  QuickFindUF.h  QuickUnionUF.cpp  QuickUnionUF.h  UF.cpp  UF.h  WeightedQuickUnionUF.cpp  WeightedQuickUnionUF.h  main.cpp
lab2/: CMakeLists.txt  arGL.h  arObserver.cpp  arObserver.h  arOptions.h  main.cpp  mysort.h
lab2_demo/: bubble  insertion  merge  mergeBU  quick  quick3way  run  run.c  std  stdstable
lab3/: CMakeLists.txt  a.out  arDijkstra.cpp  arDijkstra.h  arGraph.cpp  arGraph.h  main.cpp
lab3/wjy/: a.out  wjy.cpp
lab4/: CMakeLists.txt  corpus.txt  main.cpp  query.txt
test/: a.out
